# mcp-warden

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Makefile  README.md  RELEASING.md  SECURITY.md  SYSTEM_CONTEXT_DIAGRAM.md  action.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: action-test.yml  deps-locked.yml  docs.yml  examples.yml  integrity-gate.yml  release.yml  sigstore-fixture.yml
docs/: CHECKS.md  GUARD_PROXY.md  GUARD_PROXY_V3.md  RESULT_INSPECTION.md  SIGNING.md  SPEC.md  THREAT_MODEL.md  THREAT_MODEL_V2.md  WARDEN_LOCK_EXAMPLE.md  WARDEN_LOCK_SCHEMA.md
docs-site/: checklist.md  comparison.md  index.md  lock-format.md  pin-in-ci.md  quickstart.md  rug-pull.md  tool-poisoning.md
examples/: README.md
examples/github-actions/: matrix-multiple-servers.yml  pin-on-merge-check-on-pr.yml  private-repo-no-sarif.yml  sarif-upload.yml
examples/gitlab-ci/: .gitlab-ci.yml
examples/pre-commit/: .pre-commit-config.yaml
src/mcp_warden/: __init__.py  check_core.py  cli.py  cli_diff.py  cli_guard.py  cli_lock.py  cli_sign.py  drift.py  emitters.py  framing.py  guard_banner.py  guard_lifecycle.py  (+11 more)
tests/: test_action_yml.py  test_cli_version.py  test_diff.py  test_drift.py  test_e2e_pin_check.py  test_emitters.py  test_guard_banner.py  test_guard_platform.py  test_guard_posture.py  test_inspect_parity.py  test_lockfile.py  test_policy.py  test_precommit.py  test_provenance.py  test_result_inspection.py  test_schema_diff.py  test_schema_diff_refs.py  test_signing.py
(+10 files in other folders)
